@@ -20,6 +20,11 @@ sub disttest {
     my @missing    = manicheck;
     my @extra      = filecheck;
 
+    # I'm getting sick of making MANIFEST.SKIP files just for the .shipit
+    # conf file, so let's ignore that extra file, since that tends to be the
+    # only one....
+    @extra = grep { $_ ne ".shipit" } @extra;
+
     my $list = sub {
         join('', map { "$_\n" } @_);
     };
